cropped images list height fixed

--- a/assets-src/less/partials/image-form.less
+++ b/assets-src/less/partials/image-form.less
@@ -114,33 +114,37 @@
       right: 0;
     }
 
-    .ocim-cropped-image {
-      position: relative;
-      width: 100%;
-      margin-top: 10px;
-      margin-bottom: 30px;
-      border: dashed 1px #000;
-
-      &:after {
-        content: "";
-        position: absolute;
+    .ocim-cropped-images-list {
+      height: 90%;
+      overflow-y: auto;
+      .ocim-cropped-image {
+        position: relative;
         width: 100%;
-        height: 1px;
-        background: #ccc;
-        bottom: -15px;
-        left: 0;
-      }
+        margin-top: 10px;
+        margin-bottom: 30px;
+        border: dashed 1px #000;
 
-      canvas {
-        display: block;
-        width: 100% !important;
-        height: auto !important;
-      }
+        &:after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 1px;
+          background: #ccc;
+          bottom: -15px;
+          left: 0;
+        }
 
-      .ocim-cropped-image-delete {
-        position: absolute;
-        top: 5px;
-        right: 5px;
+        canvas {
+          display: block;
+          width: 100% !important;
+          height: auto !important;
+        }
+
+        .ocim-cropped-image-delete {
+          position: absolute;
+          top: 5px;
+          right: 5px;
+        }
       }
     }
   }
